--- a/scriptnet/competitions/templates/competitions/competition_navbar.html
+++ b/scriptnet/competitions/templates/competitions/competition_navbar.html
@@ -13,9 +13,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'index' %}#services">ScriptNet</a>
+                <a class="navbar-brand" href="{% url 'index' %}#services">{% trans "Main" %}</a>
                 {% if user.is_authenticated %}
-                <a class="navbar-brand" href="{% url 'methodlist' competition_id=competition.id %}"><small>{% trans "My competitions" %}&nbsp;<small><small>[{{ user.first_name }} {{ user.last_name }}]</small></small></small></a>
+                <a class="navbar-brand" href="{% url 'methodlist' competition_id=competition.id %}"><small>{% trans "My ScriptNet" %}&nbsp;<small><small>[{{ user.first_name }} {{ user.last_name }}]</small></small></small></a>
                 {% endif %}
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
