No data/submissions without following (Fixes #120)

--- a/scriptnet/competitions/templates/competitions/competition_content.html
+++ b/scriptnet/competitions/templates/competitions/competition_content.html
@@ -21,9 +21,11 @@
                                             {% if publink.externalLink %}
                                                 <li>
                                                 {% if user.is_authenticated %}
-                                                    <a href="{{ publink.externalLink }}">
-                                                    {{ publink.legend }}
-                                                    </a>
+                                                    {% if user.individual in competition.watchers.all %}
+                                                    <a href="{{ publink.externalLink }}">{{ publink.legend }}</a>
+                                                    {% else %}
+                                                    {{ publink.legend }} ({% trans "you have to follow the competition first" %})
+                                                    {% endif %}
                                                 {% else %}
                                                     {{ publink.legend }} ({% trans "you have to" %} <a href="{% url 'index' %}#login">{% trans "login </a> first" %})
                                                 {% endif %}
@@ -31,9 +33,13 @@
                                             {% else %}
           							            <li>
                                                       {% if user.is_authenticated %}
-                                                      <a href="{{ publink.downloadableFile.url }}">{{ publink.legend }}</a>
+                                                        {% if user.individual in competition.watchers.all %}
+                                                        <a href="{{ publink.downloadableFile.url }}">{{ publink.legend }}</a>
+                                                        {% else %}
+                                                        {{ publink.legend }} ({% trans "you have to follow the competition first" %})
+                                                        {% endif %}
                                                       {% else %}
-                                                      {{ publink.legend }} ({% trans "you have to" %} <a href="{% url 'index' %}#login">{% trans "login </a> first" %})
+                                                      {{ publink.legend }} ({% trans "you have to" %} <a href="{% url 'index' %}#login">{% trans "login </a> and follow the competition first" %})
                                                       {% endif %}
                                                 </li>
                                             {% endif %}                                        
@@ -41,11 +47,15 @@
 
                                         {% if user.is_authenticated %}
                                             {% if competition.submission_is_open %}
-            							    <li><a href="{% url 'submit' competition_id=competition.id track_id=track.percomp_uniqueid subtrack_id=subtrack.pertrack_uniqueid %}">{% trans "Submit a new method for evaluation" %}</a></li>
+                                                {% if user.individual in competition.watchers.all %}
+            							        <li><a href="{% url 'submit' competition_id=competition.id track_id=track.percomp_uniqueid subtrack_id=subtrack.pertrack_uniqueid %}">{% trans "Submit a new method for evaluation" %}</a></li>
+                                                {% else %}
+                                                <li>{% trans "Submit a new method for evaluation" %} ({% trans "you have to follow the competition first" %})</li>
+                                                {% endif %}
                                             {% endif %}
                                         {% else %}
                                             {% if competition.submission_is_open %}
-                                            <li>{% trans "Submit a new method for evaluation" %} ({% trans "you have to" %} <a href="{% url 'index' %}#login">{% trans "login </a> first" %})</li>
+                                            <li>{% trans "Submit a new method for evaluation" %} ({% trans "you have to" %} <a href="{% url 'index' %}#login">{% trans "login </a> and follow the competition first" %})</li>
                                             {% endif %}
                                         {% endif %}
         							    <li><a href="{% url 'viewresults' competition_id=competition.id track_id=track.percomp_uniqueid subtrack_id=subtrack.pertrack_uniqueid %}">{% trans "View results for all available methods" %}</a></li>                                        
