Minor on previous fix

--- a/scriptnet/competitions/templates/competitions/competition_content.html
+++ b/scriptnet/competitions/templates/competitions/competition_content.html
@@ -27,7 +27,7 @@
                                                     {{ publink.legend }} ({% trans "you have to follow the competition first" %})
                                                     {% endif %}
                                                 {% else %}
-                                                    {{ publink.legend }} ({% trans "you have to" %} <a href="{% url 'index' %}#login">{% trans "login </a> first" %})
+                                                    {{ publink.legend }} ({% trans "you have to" %} <a href="{% url 'index' %}#login">{% trans "login and follow the competition first</a> first" %})
                                                 {% endif %}
                                                 </li>
                                             {% else %}
